# smart-shopping-cart

./: .gitignore  Jenkinsfile  Jenkinsfile.back  Jenkinsfile.front  README.md  coords.json  parse_wkb.py
rc_tracking/src/rc_detection/: CMakeLists.txt  setup.py
rc_tracking/src/rc_detection/config/: slam_config.rviz
rc_tracking/src/rc_detection/launch/: full_system.launch.py  slam_mapping.launch.py  tracking_system.launch.py  tracking_webcam.launch.py  (+1 more)
slam_mapping/: .gitignore  README.md  REMOTE_SLAM_VISUALIZATION_GUIDE.md  SLAM_MAPPING_GUIDE.md  WEB_NAVIGATION_GUIDE.md  control_car.py  cyclonedds_rc_car.xml  cyclonedds_remote_pc.xml  package.xml  requirements.txt  setup.cfg  setup.py  setup_rc_car.sh  setup_remote_pc.sh  slam_log.txt  slam_mapping_GUIDE.md  tracking_controller_node.py
slam_mapping/config/: cyclonedds_rc_car.xml  cyclonedds_remote_pc.xml  explore_params.yaml  fastdds.xml  nav2_explore_params.yaml  nav2_params.yaml  remote_slam.rviz  ydlidar_2d.lua  ydlidar_2d_localization.lua
slam_mapping/docs/: AUTONOMOUS_EXPLORATION_GUIDE.md  REMOTE_RVIZ_GUIDE.md  REMOTE_SLAM_VISUALIZATION_GUIDE.md  SLAM_MAPPING_GUIDE.md  WEB_NAVIGATION_GUIDE.md
slam_mapping/launch/: cartographer.launch.py  nav2_navigation.launch.py  save_map.launch.py  slam_mapping.launch.py
slam_mapping/maps/: s4_map.pbstream  s4_map.pgm  s4_map.yaml  test_map.pbstream  test_map.pgm  test_map.yaml
slam_mapping/rccar_nodes/: cmd_vel_bridge.py  goal_bridge.py  tf_to_web.py
slam_mapping/rviz/: slam.rviz
slam_mapping/scripts/: build.sh  create_slam_map.sh  create_slam_map_headless.sh  run_slam_direct.sh  save_map.sh  setup_rc_car.sh  setup_rc_car_for_remote.sh  setup_remote_pc.sh  setup_remote_rviz.sh  start_autonomous_mapping.sh  start_full_navigation.sh  start_navigation.sh  test_slam.sh  test_standalone.py
slam_mapping/slam_mapping2/: odom_publisher.py  ydlidar_node.py  ydlidar_ros2_node.py  ydlidar_simple_node.py
slam_mapping/urdf/: robot.urdf
slam_mapping/web/: index.html  position_server.py
(+261 files in other folders)
